# inference

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.claude/: settings.local.json
.cursor/rules/: inference-api-design-standards.mdc  inference-dependencies-build.mdc  inference-frb-codegen.mdc  inference-package-architecture.mdc  inference-rust-implementation.mdc  inference-testing-examples.mdc
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  example.dart  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/dev/shankarkakumani/inference/inference_example/: MainActivity.kt
example/assets/models/linfa/: sample_training_data.csv
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/knowledge/: example_brd.md
example/lib/: app.dart  main.dart
example/lib/screens/: about_screen.dart  audio_classification_screen.dart  huggingface_demo_screen.dart  image_classification_screen.dart  performance_screen.dart  text_sentiment_screen.dart  training_screen.dart
example/lib/services/: inference_service.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: inference.podspec
knowledge/: corrective_plan.md  development_plan.md  implementation_progress.md  inference_brd.md  model_wrappers_roadmap.md  new_implementation_plan.md  phase_prompts.md  project_context.md
lib/: inference.dart
lib/src/: inference.dart  inference_input.dart  inference_result.dart  inference_session.dart
lib/src/engines/: candle_session.dart  linfa_session.dart  onnx_session.dart
lib/src/exceptions/: inference_exceptions.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart
lib/src/rust/api/: inference.dart
lib/src/rust/models/: error.dart  error.freezed.dart  tensor.dart
linux/: CMakeLists.txt
macos/: inference.podspec
rust/: Cargo.toml  create_test_models.py
rust/.cargo/: config.toml
rust/src/: frb_generated.rs  lib.rs  main.rs
rust/src/api/: inference.rs  mod.rs
rust/src/engines/: candle_engine.rs  factory.rs  linfa_engine.rs  mod.rs  ort_engine.rs
rust/src/engines/candle_engine/: model_wrappers.rs
rust/src/models/: error.rs  mod.rs  preprocessing.rs  session.rs  tensor.rs
rust/src/utils/: converters.rs  mod.rs  model_detector.rs
windows/: CMakeLists.txt
