[package]
name = "inference"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "fs", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
ndarray = "0.15"
async-trait = "0.1"
once_cell = "1.19"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }

# Core ML frameworks - optional features
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
linfa = { version = "0.7", optional = true }
linfa-linear = { version = "0.7", optional = true }
linfa-clustering = { version = "0.7", optional = true }
linfa-svm = { version = "0.7", optional = true }
linfa-trees = { version = "0.7", optional = true }
linfa-nn = { version = "0.7", optional = true }
rand = { version = "0.8", optional = true }
bincode = "1.3"

# Image/data processing
image = { version = "0.25", optional = true }
hf-hub = { version = "0.3", optional = true }
safetensors = { version = "0.4", optional = true }

[features]
default = ["candle", "linfa"]
candle = ["candle-core", "candle-nn", "candle-transformers", "safetensors"]
candle-cuda = ["candle", "candle-core/cuda"]
candle-mkl = ["candle", "candle-core/mkl"]
candle-gpu = ["candle-cuda", "candle-mkl"]
linfa = ["dep:linfa", "linfa-linear", "linfa-clustering", "linfa-svm", "linfa-trees", "linfa-nn", "rand"]
gpu = ["candle-gpu"]
processing = ["image", "hf-hub"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
